--- a/setup/eslint/.eslintrc
+++ b/setup/eslint/.eslintrc
@@ -1,104 +1,152 @@
 {
+  "extends": "eslint:recommended",
+
   "env": {
     "es6": true,
     "node": true,
     "browser": true
   },
-  "rules": {
-    "array-bracket-spacing": [2, "always"],
-    "arrow-spacing": [2, { "before": true, "after": true }],
-    "block-spacing": [2, "always"],
-    "brace-style": [2, "1tbs", { "allowSingleLine": false }],
-    "comma-spacing": [2, {"before": false, "after": true}],
-    "comma-style": [2, "last"],
-    "curly": [2, "all"],
-    "dot-location": [2, "property"],
-    "eol-last": [2],
-    "indent": [2, 2, {"SwitchCase": 1}],
-    "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
-    "linebreak-style": [2],
-    "no-func-assign": [2],
-    "no-mixed-spaces-and-tabs": [2],
-    "no-multi-spaces": [2],
-    "no-spaced-func": [2],
-    "no-trailing-spaces": [2],
-    "object-curly-spacing": [2, "always"],
-    "one-var": [2, "never"],
-    "quotes": [2, "single"],
-    "semi-spacing": [2, {"before": false, "after": true}],
-    "keyword-spacing": [2],
-    "space-before-blocks": [2],
-    "space-before-function-paren": [2, "never"],
-    "space-infix-ops": [2],
-    "space-unary-ops": [2, { "words": true, "nonwords": false }],
 
-    "comma-dangle": [2, "never"],
-    "complexity": [1, 10],
-    "dot-notation": [2],
-    "eqeqeq": [2],
-    "new-parens": [2],
-    "no-alert": [2],
-    "no-array-constructor": [2],
-    "no-catch-shadow": [2],
-    "no-cond-assign": [2],
-    "no-constant-condition": [2],
-    "no-control-regex": [2],
-    "no-debugger": [2],
-    "no-delete-var": [2],
-    "no-div-regex": [2],
-    "no-dupe-args": [2],
-    "no-dupe-keys": [2],
-    "no-duplicate-case": [2],
-    "no-empty": [2],
-    "no-empty-character-class": [2],
-    "no-eq-null": [2],
-    "no-eval": [2],
-    "no-ex-assign": [2],
-    "no-extend-native": [2],
-    "no-extra-bind": [2],
-    "no-extra-boolean-cast": [2],
-    "no-extra-semi": [2],
-    "no-fallthrough": [2],
-    "no-floating-decimal": [2],
-    "no-implied-eval": [2],
-    "no-inner-declarations": [2],
-    "no-invalid-regexp": [2],
-    "no-irregular-whitespace": [2],
-    "no-iterator": [2],
-    "no-labels": [2],
-    "no-lone-blocks": [2],
-    "no-lonely-if": [2],
-    "no-loop-func": [2],
-    "no-multi-str": [2],
-    "no-native-reassign": [2],
-    "no-negated-in-lhs": [2],
-    "no-new": [2],
-    "no-new-func": [2],
-    "no-new-object": [2],
-    "no-new-wrappers": [2],
-    "no-obj-calls": [2],
-    "no-octal": [2],
-    "no-octal-escape": [2],
-    "no-redeclare": [2],
-    "no-regex-spaces": [2],
-    "no-return-assign": [2],
-    "no-script-url": [2],
-    "no-self-compare": [2],
-    "no-sequences": [2],
-    "no-shadow-restricted-names": [2],
-    "no-sparse-arrays": [2],
-    "no-throw-literal": [2],
-    "no-undef": [2],
-    "no-unneeded-ternary": [2],
-    "no-unreachable": [2],
-    "no-unused-expressions": [2, { "allowShortCircuit": true, "allowTernary": true }],
-    "no-unused-vars": [2],
-    "no-useless-concat": [2],
-    "no-void": [2],
-    "no-warning-comments": [ 1, { "terms": [ "todo", "fixme" ], "location": "anywhere" } ],
-    "no-with": [2],
-    "radix": [2],
-    "use-isnan": [2],
-    "valid-typeof": [2]
+  "rules": {
+    "array-bracket-newline": ["error", {
+      "multiline": true
+    }],
+    "array-bracket-spacing": ["error", "always"],
+    "array-element-newline": ["error", "never"],
+    "block-spacing": ["error", "always"],
+    "brace-style": ["error", "1tbs", {
+      "allowSingleLine": false
+    }],
+    "capitalized-comments": "error",
+    "comma-dangle": ["error", "never"],
+    "comma-spacing": ["error", {
+      "before": false,
+      "after": true
+    }],
+    "comma-style": ["error", "last"],
+    "computed-property-spacing": ["error", "never"],
+    "consistent-this": ["error", "self"],
+    "eol-last": ["error", "always"],
+    "func-call-spacing": ["error", "never"],
+    "indent": ["error", 2, {
+      "SwitchCase": 1,
+      "MemberExpression": 1,
+      "ObjectExpression": 1,
+      "flatTernaryExpressions": true
+    }],
+    "key-spacing": ["error", {
+      "beforeColon": false,
+      "afterColon": true
+    }],
+    "keyword-spacing": "error",
+    "linebreak-style": "error",
+    "new-parens": "error",
+    "newline-per-chained-call": ["error", {
+      "ignoreChainWithDepth": 2
+    }],
+    "no-lonely-if": "error",
+    "no-new-object": "error",
+    "no-trailing-spaces": "error",
+    "no-unneeded-ternary": "error",
+    "no-whitespace-before-property": "error",
+    "object-curly-spacing": ["error", "always"],
+    "one-var": ["error", "never"],
+    "operator-assignment": ["error", "always"],
+    "quotes": ["error", "single"],
+    "semi-spacing": "error",
+    "space-before-blocks": "error",
+    "space-before-function-paren": ["error", "never"],
+    "space-infix-ops": "error",
+    "space-unary-ops": ["error", {
+      "words": true,
+      "nonwords": false
+    }],
+    "space-in-parens": ["error", "never"],
+    "spaced-comment": ["error", "always"],
+    "switch-colon-spacing": "error",
+    "template-tag-spacing": "error",
+
+    "getter-return": ["error", {
+      "allowImplicit": true
+    }],
+    "no-await-in-loop": "error",
+    "complexity": ["error", 10],
+    "curly": ["error", "all"],
+    "dot-location": ["error", "property"],
+    "dot-notation": "error",
+    "eqeqeq": "error",
+    "no-alert": "error",
+    "no-div-regex": "error",
+    "no-else-return": "error",
+    "no-eq-null": "error",
+    "no-eval": "error",
+    "no-extend-native": "error",
+    "no-extra-bind": "error",
+    "no-extra-label": "error",
+    "no-floating-decimal": "error",
+    "no-implicit-coercion": "error",
+    "no-implied-eval": "error",
+    "no-invalid-this": "error",
+    "no-iterator": "error",
+    "no-labels": "error",
+    "no-lone-blocks": "error",
+    "no-loop-func": "error",
+    "no-multi-spaces": ["error", {
+      "exceptions": { "Property": true }
+    }],
+    "no-multi-str": "error",
+    "no-new": "error",
+    "no-new-func": "error",
+    "no-new-wrappers": "error",
+    "no-octal-escape": "error",
+    "no-proto": "error",
+    "no-return-assign": "error",
+    "no-return-await": "error",
+    "no-script-url": "error",
+    "no-self-compare": "error",
+    "no-sequences": "error",
+    "no-throw-literal": "error",
+    "no-unmodified-loop-condition": "error",
+    "no-unused-expressions": ["error", {
+      "allowShortCircuit": true
+    }],
+    "no-useless-call": "error",
+    "no-useless-concat": "error",
+    "no-void": "error",
+    "no-with": "error",
+    "radix": "error",
+    "require-await": "error",
+
+    "no-catch-shadow": "error",
+    "no-shadow-restricted-names": "error",
+    "no-use-before-define": "error",
+
+    "handle-callback-err": "error",
+    "no-buffer-constructor": "error",
+    "no-mixed-requires": "error",
+    "no-new-require": "error",
+    "no-path-concat": "error",
+
+    "arrow-body-style": ["error", "as-needed"],
+    "arrow-parens": ["error", "as-needed"],
+    "arrow-spacing": "error",
+    "generator-star-spacing": ["error", {
+      "before": true,
+      "after": false
+    }],
+    "yield-star-spacing": ["error", {
+      "before": true,
+      "after": false
+    }],
+    "no-confusing-arrow": "error",
+    "no-duplicate-imports": "error",
+    "no-useless-computed-key": "error",
+    "no-useless-constructor": "error",
+    "no-useless-rename": "error",
+    "prefer-numeric-literals": "error",
+    "rest-spread-spacing": "error",
+    "symbol-description": "error",
+
+    "no-console": "off"
   }
 }
