fixed eslint conf

--- a/setup/eslint/.eslintrc
+++ b/setup/eslint/.eslintrc
@@ -16,7 +16,6 @@
     "brace-style": ["error", "1tbs", {
       "allowSingleLine": false
     }],
-    "capitalized-comments": "error",
     "comma-dangle": ["error", "never"],
     "comma-spacing": ["error", {
       "before": false,
@@ -61,7 +60,6 @@
       "nonwords": false
     }],
     "space-in-parens": ["error", "never"],
-    "spaced-comment": ["error", "always"],
     "switch-colon-spacing": "error",
     "template-tag-spacing": "error",
 
@@ -131,12 +129,12 @@
     "arrow-parens": ["error", "as-needed"],
     "arrow-spacing": "error",
     "generator-star-spacing": ["error", {
-      "before": true,
-      "after": false
+      "before": false,
+      "after": true
     }],
     "yield-star-spacing": ["error", {
-      "before": true,
-      "after": false
+      "before": false,
+      "after": true
     }],
     "no-confusing-arrow": "error",
     "no-duplicate-imports": "error",
