--- a/setup/eslint/.eslintrc
+++ b/setup/eslint/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "eslint:recommended",
 
+  "parserOptions": {
+    "ecmaVersion": 2017
+  },
+
   "env": {
     "es6": true,
     "node": true,
