--- a/setup/eslint/.eslintrc
+++ b/setup/eslint/.eslintrc
@@ -2,7 +2,8 @@
   "extends": "eslint:recommended",
 
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 8,
+    "sourceType": "module"
   },
 
   "env": {
