--- a/setup/eslint/.eslintrc.json
+++ b/setup/eslint/.eslintrc.json
@@ -16,40 +16,60 @@
   },
 
   "rules": {
-    "array-bracket-newline": ["error", {
-      "multiline": true
-    }],
-    "array-bracket-spacing": ["error", "always"],
+    "array-bracket-newline": [
+      "error",
+      {
+        "multiline": true
+      }
+    ],
+    "array-bracket-spacing": ["error", "never"],
     "block-spacing": ["error", "always"],
-    "brace-style": ["error", "1tbs", {
-      "allowSingleLine": false
-    }],
+    "brace-style": [
+      "error",
+      "1tbs",
+      {
+        "allowSingleLine": false
+      }
+    ],
     "comma-dangle": ["error", "never"],
-    "comma-spacing": ["error", {
-      "before": false,
-      "after": true
-    }],
+    "comma-spacing": [
+      "error",
+      {
+        "before": false,
+        "after": true
+      }
+    ],
     "comma-style": ["error", "last"],
     "computed-property-spacing": ["error", "never"],
     "consistent-this": ["error", "self"],
     "eol-last": ["error", "always"],
     "func-call-spacing": ["error", "never"],
-    "indent": ["error", 2, {
-      "SwitchCase": 1,
-      "MemberExpression": 1,
-      "ObjectExpression": 1,
-      "flatTernaryExpressions": true
-    }],
-    "key-spacing": ["error", {
-      "beforeColon": false,
-      "afterColon": true
-    }],
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1,
+        "MemberExpression": 1,
+        "ObjectExpression": 1,
+        "flatTernaryExpressions": true
+      }
+    ],
+    "key-spacing": [
+      "error",
+      {
+        "beforeColon": false,
+        "afterColon": true
+      }
+    ],
     "keyword-spacing": "error",
     "linebreak-style": "error",
     "new-parens": "error",
-    "newline-per-chained-call": ["error", {
-      "ignoreChainWithDepth": 3
-    }],
+    "newline-per-chained-call": [
+      "error",
+      {
+        "ignoreChainWithDepth": 3
+      }
+    ],
     "no-lonely-if": "error",
     "no-new-object": "error",
     "no-trailing-spaces": "error",
@@ -63,17 +83,23 @@
     "space-before-blocks": "error",
     "space-before-function-paren": ["error", "never"],
     "space-infix-ops": "error",
-    "space-unary-ops": ["error", {
-      "words": true,
-      "nonwords": false
-    }],
+    "space-unary-ops": [
+      "error",
+      {
+        "words": true,
+        "nonwords": false
+      }
+    ],
     "space-in-parens": ["error", "never"],
     "switch-colon-spacing": "error",
     "template-tag-spacing": "error",
 
-    "getter-return": ["error", {
-      "allowImplicit": true
-    }],
+    "getter-return": [
+      "error",
+      {
+        "allowImplicit": true
+      }
+    ],
     "no-await-in-loop": "error",
     "complexity": ["error", 10],
     "curly": ["error", "all"],
@@ -89,17 +115,23 @@
     "no-extra-bind": "error",
     "no-extra-label": "error",
     "no-floating-decimal": "error",
-    "no-implicit-coercion": ["error", {
-      "allow": ["!!"]
-    }],
+    "no-implicit-coercion": [
+      "error",
+      {
+        "allow": ["!!"]
+      }
+    ],
     "no-implied-eval": "error",
     "no-iterator": "error",
     "no-labels": "error",
     "no-lone-blocks": "error",
     "no-loop-func": "error",
-    "no-multi-spaces": ["error", {
-      "exceptions": { "Property": true }
-    }],
+    "no-multi-spaces": [
+      "error",
+      {
+        "exceptions": { "Property": true }
+      }
+    ],
     "no-multi-str": "error",
     "no-new": "error",
     "no-new-func": "error",
@@ -113,9 +145,12 @@
     "no-sequences": "error",
     "no-throw-literal": "error",
     "no-unmodified-loop-condition": "error",
-    "no-unused-expressions": ["error", {
-      "allowShortCircuit": true
-    }],
+    "no-unused-expressions": [
+      "error",
+      {
+        "allowShortCircuit": true
+      }
+    ],
     "no-useless-call": "error",
     "no-useless-concat": "error",
     "no-void": "error",
@@ -136,14 +171,20 @@
     "arrow-body-style": ["error", "as-needed"],
     "arrow-parens": ["error", "as-needed"],
     "arrow-spacing": "error",
-    "generator-star-spacing": ["error", {
-      "before": false,
-      "after": true
-    }],
-    "yield-star-spacing": ["error", {
-      "before": false,
-      "after": true
-    }],
+    "generator-star-spacing": [
+      "error",
+      {
+        "before": false,
+        "after": true
+      }
+    ],
+    "yield-star-spacing": [
+      "error",
+      {
+        "before": false,
+        "after": true
+      }
+    ],
     "no-confusing-arrow": "error",
     "no-duplicate-imports": "error",
     "no-useless-computed-key": "error",
