--- a/willSetup/git/.gitconfig
+++ b/willSetup/git/.gitconfig
@@ -1,27 +1,15 @@
 [core]
   autocrlf = input
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [user]
-	name = velocityzen
-	email = velocityzen@gmail.com
+	name = Alexey Novikov
+	email = alexey.novikov@reaktor.com
 [github]
   user = velocityzen
-[mergetool "Kaleidoscope"]
-	cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
-	trustexitcode = true
-[merge]
-	tool = Kaleidoscope
-[difftool "Kaleidoscope"]
-	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
-[difftool]
-	prompt = false
-[mergetool]
-	prompt = false
-[diff]
-	tool = Kaleidoscope
 [push]
 	default = current
 [color]
-	ui = auto
+	ui = true
 [alias]
 	cam = commit -am
   a = add --all
@@ -44,3 +32,5 @@
 	smudge = git-lfs smudge -- %f
 [branch]
 	autosetuprebase = always
+[interactive]
+	diffFilter = diff-so-fancy --patch
