--- a/willSetup/git/.gitconfig
+++ b/willSetup/git/.gitconfig
@@ -1,17 +1,17 @@
 [core]
   autocrlf = input
-	pager = diff-so-fancy | less --tabs=4 -RFX
+  pager = diff-so-fancy | less --tabs=4 -RFX
 [user]
-	name = Alexey Novikov
-	email = alexey.novikov@reaktor.com
+  name = Alexey Novikov
+  email = v@2dubs.com
 [github]
   user = velocityzen
 [push]
-	default = current
+  default = current
 [color]
-	ui = true
+  ui = true
 [alias]
-	cam = commit -am
+  cam = commit -am
   a = add --all
   branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
   p = push
