--- a/willSetup/git/.gitconfig
+++ b/willSetup/git/.gitconfig
@@ -26,6 +26,7 @@
   subs = submodule foreach git pull origin master
   up = "!git remote update -p; git merge --ff-only @{u}"
   first = "!git init && git add . && git commit -am \"🚀\""
+  tags = tag -l
 [filter "lfs"]
 	process = git-lfs filter-process
 	required = true
